fix: correction de la hauteur (z-index) du header pour qu'il reste toujours en dessus du reste des composants

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -17,7 +17,7 @@ div#header {
     position: sticky;
     position: -webkit-sticky;
     top: 0;
-    z-index: 1;
+    z-index: 100;
 }
 
 a#header-title {
