--- a/src/app/page-projets/search-bar/search-bar.component.css
+++ b/src/app/page-projets/search-bar/search-bar.component.css
@@ -259,7 +259,6 @@ div.dropdown-content-element:last-child {
     
     div.search-bar {
         justify-content: space-between;
-        margin-bottom: 20px;
 
     }
     .search-bar-button-reset {
